--- a/Strokes/web/index.html
+++ b/Strokes/web/index.html
@@ -11,7 +11,7 @@
                             </head>
     <body>
         <div>
-            <!-- TODO: MAKE WORK NATIVELY -->
+            <!-- TODO: Have JavaScript and JQuery communicate with Swift to provide the character. -->
             <form class="form-inline char-select-form js-char-form">
                 <div class="form-group">
                     <label for="character-select">
@@ -32,7 +32,6 @@
                     </div>
                 </form>
             </div>
-            <!-- <a href="docs.html#quizzing-link" class="demo-docs-link">Learn more about quizzes</a> -->
         </div>
         <script src="jquery.min.js"></script>
         <script type="application/javascript" src="demo.js"></script>
