Added UISearchBarDelegate skeleton

--- a/Strokes/web/index.html
+++ b/Strokes/web/index.html
@@ -28,7 +28,7 @@
                         <label>
                             <input type="checkbox" checked="checked" id="quiz-show-outline" /> Show Outline
                         </label>
-                        <button class="btn btn-primary" id="quiz-reset">Reset</button>
+                        <button class="btn btn-primary" id="quiz-reset">Reset</button> <!-- IMPORTANT QUIZ RESET -->
                     </div>
                 </form>
             </div>
