--- a/Strokes/web/index.html
+++ b/Strokes/web/index.html
@@ -11,8 +11,7 @@
                             </head>
     <body>
         <div>
-            <!-- TODO: Have JavaScript and JQuery communicate with Swift to provide the character. -->
-            <form class="form-inline char-select-form js-char-form">
+            <!--<form class="form-inline char-select-form js-char-form">
                 <div class="form-group">
                     <label for="character-select">
                         Character
@@ -20,18 +19,21 @@
                     <input type="text" class="form-control character-select" id="character-select" size="1" maxlength="1" value="水" />
                 </div>
                 <button type="submit" class="btn btn-default">Update demos</button>
-            </form>
+            </form> -->
             <div class="demo-target" id="quiz-target"></div>
-            <div class="demo-controls">
+            <!--
+             <div class="demo-controls">
                 <form class="form-inline">
                     <div class="checkbox">
                         <label>
                             <input type="checkbox" checked="checked" id="quiz-show-outline" /> Show Outline
                         </label>
-                        <button class="btn btn-primary" id="quiz-reset">Reset</button> <!-- IMPORTANT QUIZ RESET -->
+                        <button class="btn btn-primary" id="quiz-reset">Reset</button>
                     </div>
                 </form>
             </div>
+             -->
+            
         </div>
         <script src="jquery.min.js"></script>
         <script type="application/javascript" src="demo.js"></script>
